# plasma-android-sdk

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.gradle  settings.gradle
assets/uml/: architecute_sample.pu
demo-hello-world/: build.gradle
demo-hello-world/src/main/: AndroidManifest.xml
demo-hello-world/src/main/res/layout/: activity_main.xml
demo-hello-world/src/main/res/values/: strings.xml
demo-payment-usecase/: build.gradle
demo-payment-usecase/src/main/: AndroidManifest.xml
demo-payment-usecase/src/main/res/drawable/: bottom_navigation_colors.xml  button_extended_fab_background.xml  cell_payment_background.xml  cell_wallet_background.xml  image_exchange_background.xml  image_recieve_background.xml  image_send_background.xml  label_status_confirmed_background.xml  label_status_failed_background.xml  label_status_pending_background.xml  main_gradation.xml  shape_cursor.xml
demo-payment-usecase/src/main/res/layout/: activity_home.xml  activity_login.xml  activity_new_offer.xml  activity_new_payment.xml  activity_offer_history.xml  activity_scan_qrcode.xml  activity_splash.xml  fragment_exchange.xml  fragment_login.xml  fragment_new_offer.xml  fragment_new_payment.xml  fragment_offer_history.xml  fragment_payment.xml  fragment_scan_qrcode.xml  fragment_wallet.xml  item_cell_exchange.xml  item_cell_exchange_history.xml  item_cell_payment.xml  item_cell_wallet.xml  spinner_cell.xml  (+1 more)
gradle/wrapper/: gradle-wrapper.properties
ovm/: build.gradle
ovm/src/main/: AndroidManifest.xml
plasma_android_sdk/: .gitignore  ARCHITECTURE.md  build.gradle
plasma_android_sdk/src/main/: AndroidManifest.xml
rust/: .gitignore  Cargo.toml  ci.sh  config.private
rust/src/: lib.rs
rust/tools/: build.sh  install_ndk.sh
show_case/: build.gradle
show_case/src/main/: AndroidManifest.xml
(+113 files in other folders)
