[package]
name = "plasma_android_sdk"
version = "0.1.0"
authors = ["Cryptoeconomics Lab <info@cryptoeconomicslab.com>"]
edition = "2018"

[dependencies]
jni = { version = "0.10.2", default-features = false }
plasma-core = { git = "https://github.com/cryptoeconomicslab/plasma-rust-framework.git" }

[dependencies.plasma-client]
git = "https://github.com/syuhei176/plasma-rust-framework.git"
branch = "clean-dependencies"
default-features = false
features = ["noleveldb"]

[profile.release]
lto = true

[lib]
name = "plasma_android_sdk"
crate-type = ["cdylib"]
