[package]
name = "plasma_android_sdk"
version = "0.1.0"
authors = ["Cryptoeconomics Lab <info@cryptoeconomicslab.com>"]
edition = "2018"

[dependencies]
jni = { version = "0.10.2", default-features = false }
log = "*"
android_logger = "0.8"

[dependencies.plasma-core]
git = "https://github.com/cryptoeconomicslab/plasma-rust-framework.git"
branch = "restrictweb3-features"

[dependencies.pubsub-messaging]
git = "https://github.com/cryptoeconomicslab/plasma-rust-framework.git"


[profile.release]
lto = true

[lib]
name = "plasma_android_sdk"
crate-type = ["cdylib"]
