[package]
name = "plasma_android_sdk"
version = "0.1.0"
authors = ["Cryptoeconomics Lab <info@cryptoeconomicslab.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.12"
hex = "0.3.1"
jni = { version = "0.10.2", default-features = false }
log = "*"
android_logger = "0.8"
ethereum-types = "^0.5.2"

[dependencies.plasma-clients]
# git = "https://github.com/cryptoeconomicslab/plasma-rust-framework.git"
path = "../../plasma-rust-framework/clients"

[profile.release]
lto = true

[lib]
name = "plasma_android_sdk"
crate-type = ["cdylib"]
